# mcp-server-demo

./: .env.example  .gitignore  CHANGELOG.md  README.md  podcast-guion.md  pyproject.toml  requirements-all.txt  requirements-dev.txt
data/: seed.sql
docs/: index.html
examples/: claude_desktop_config.json
scripts/: seed_db.py
src/mcp_server_demo/: config.py  server.py
src/mcp_server_demo/db/: connection.py
src/mcp_server_demo/resources/: schema.py
src/mcp_server_demo/tools/: api_tools.py  db_tools.py
tests/: test_api_tools.py  test_db_tools.py
