[tool.poetry]
name = "mcp-server-demo"
version = "0.1.0"
description = "Servidor MCP que expone tools propias (SQLite + API externa) para un LLM."
readme = "README.md"
license = "MIT"
authors = ["Maximiliano R. Soria"]
packages = [
    { include = "mcp_server_demo", from = "src" },
    { include = "scripts" },
]

[tool.poetry.dependencies]
python = "^3.11"
mcp = ">=1.2"
httpx = ">=0.28.1"
pydantic-settings = ">=2.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2"
ruff = ">=0.5"
black = ">=24.4"

[tool.poetry.scripts]
mcp-server-demo = "mcp_server_demo.server:main"
seed-db = "scripts.seed_db:main"

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
